--- a/index.html
+++ b/index.html
@@ -689,7 +689,31 @@ $(document).ready(function()
 w.gbwawc = {
 url: u,
 options: {
-        waId: "+20 01095661985",
+        waId: "+20 1095661985",
+        siteName: "شركة السعد لنقل الاثاث",
+        siteTag: "نقل عفش - فك وتركيب - تغليف",
+        siteLogo: "https://code-house10.github.io/elnasr-hamada/images/p3.jpg",
+        widgetPosition: "RIGHT",
+        triggerMessage: "تواصل معنا الان",
+        welcomeMessage: "اهلا بك فى شركة السعد لنقل الاثاث\لمعرفة كافة التفاصيل والاسعار اتصل بنا على 01095661985",
+        brandColor: "#25D366",
+        messageText: "انا عاوز اعرف الاسعار ",
+        replyOptions: ['يرجى الاتصال بنا لمعرفة التفاصيل واخبارك بالتكلفة المناسبة 01095661985','',''],
+    },
+};
+var h = d.getElementsByTagName(s)[0],
+j = d.createElement(s);
+j.async = true;
+j.src = u + "/whatsapp-widget.min.js?_=" + Math.random();
+h.parentNode.insertBefore(j, h);
+})(window, document, "script", "https://waw.gallabox.com");
+</script>
+<script>
+(function (w, d, s, u) {
+w.gbwawc = {
+url: u,
+options: {
+        waId: "+20 1095661985",
         siteName: "شركة السعد لنقل الاثاث",
         siteTag: "نقل عفش - فك وتركيب - تغليف",
         siteLogo: "https://code-house10.github.io/elnasr-hamada/images/p3.jpg",
@@ -713,31 +737,7 @@ h.parentNode.insertBefore(j, h);
 w.gbwawc = {
 url: u,
 options: {
-        waId: "+20 01095661985",
-        siteName: "شركة السعد لنقل الاثاث",
-        siteTag: "نقل عفش - فك وتركيب - تغليف",
-        siteLogo: "https://code-house10.github.io/elnasr-hamada/images/p3.jpg",
-        widgetPosition: "RIGHT",
-        triggerMessage: "تواصل معنا الان",
-        welcomeMessage: "اهلا بك فى شركة السعد لنقل الاثاث\nلمعرفة كافة التفاصيل والاسعار اتصل بنا على 01095661985",
-        brandColor: "#25D366",
-        messageText: "انا عاوز اعرف الاسعار ",
-        replyOptions: ['يرجى الاتصال بنا لمعرفة التفاصيل واخبارك بالتكلفة المناسبة 01095661985','',''],
-    },
-};
-var h = d.getElementsByTagName(s)[0],
-j = d.createElement(s);
-j.async = true;
-j.src = u + "/whatsapp-widget.min.js?_=" + Math.random();
-h.parentNode.insertBefore(j, h);
-})(window, document, "script", "https://waw.gallabox.com");
-</script>
-<script>
-(function (w, d, s, u) {
-w.gbwawc = {
-url: u,
-options: {
-        waId: "+20 01095661985",
+        waId: "+20 1095661985",
         siteName: "شركة السعد لنقل الاثاث",
         siteTag: "نقل عفش - فك وتركيب - تغليف",
         siteLogo: "https://code-house10.github.io/elnasr-hamada/images/p3.jpg",
