--- a/index.html
+++ b/index.html
@@ -683,78 +683,15 @@ $(document).ready(function()
 </div>
 </div>
 
-
-<script>
-(function (w, d, s, u) {
-w.gbwawc = {
-url: u,
-options: {
-        waId: "+20 1095661985",
-        siteName: "شركة السعد لنقل الاثاث",
-        siteTag: "نقل عفش - فك وتركيب - تغليف",
-        siteLogo: "https://code-house10.github.io/elnasr-hamada/images/p3.jpg",
-        widgetPosition: "RIGHT",
-        triggerMessage: "تواصل معنا الان",
-        welcomeMessage: "اهلا بك فى شركة السعد لنقل الاثاث\لمعرفة كافة التفاصيل والاسعار اتصل بنا على 01095661985",
-        brandColor: "#25D366",
-        messageText: "انا عاوز اعرف الاسعار ",
-        replyOptions: ['يرجى الاتصال بنا لمعرفة التفاصيل واخبارك بالتكلفة المناسبة 01095661985','',''],
-    },
-};
-var h = d.getElementsByTagName(s)[0],
-j = d.createElement(s);
-j.async = true;
-j.src = u + "/whatsapp-widget.min.js?_=" + Math.random();
-h.parentNode.insertBefore(j, h);
-})(window, document, "script", "https://waw.gallabox.com");
-</script>
-<script>
-(function (w, d, s, u) {
-w.gbwawc = {
-url: u,
-options: {
-        waId: "+20 1095661985",
-        siteName: "شركة السعد لنقل الاثاث",
-        siteTag: "نقل عفش - فك وتركيب - تغليف",
-        siteLogo: "https://code-house10.github.io/elnasr-hamada/images/p3.jpg",
-        widgetPosition: "RIGHT",
-        triggerMessage: "تواصل معنا الان",
-        welcomeMessage: "اهلا بك فى شركة السعد لنقل الاثاث\nلمعرفة كافة التفاصيل والاسعار اتصل بنا على 01095661985",
-        brandColor: "#25D366",
-        messageText: "انا عاوز اعرف الاسعار ",
-        replyOptions: ['يرجى الاتصال بنا لمعرفة التفاصيل واخبارك بالتكلفة المناسبة 01095661985','',''],
-    },
-};
-var h = d.getElementsByTagName(s)[0],
-j = d.createElement(s);
-j.async = true;
-j.src = u + "/whatsapp-widget.min.js?_=" + Math.random();
-h.parentNode.insertBefore(j, h);
-})(window, document, "script", "https://waw.gallabox.com");
-</script>
-<script>
-(function (w, d, s, u) {
-w.gbwawc = {
-url: u,
-options: {
-        waId: "+20 1095661985",
-        siteName: "شركة السعد لنقل الاثاث",
-        siteTag: "نقل عفش - فك وتركيب - تغليف",
-        siteLogo: "https://code-house10.github.io/elnasr-hamada/images/p3.jpg",
-        widgetPosition: "RIGHT",
-        triggerMessage: "تواصل معنا الان",
-        welcomeMessage: "اهلا بك فى شركة السعد لنقل الاثاث\nلمعرفة كافة التفاصيل والاسعار اتصل بنا على 01095661985",
-        brandColor: "#25D366",
-        messageText: "انا عاوز اعرف الاسعار ",
-        replyOptions: ['يرجى الاتصال بنا لمعرفة التفاصيل واخبارك بالتكلفة المناسبة 01095661985','',''],
-    },
-};
-var h = d.getElementsByTagName(s)[0],
-j = d.createElement(s);
-j.async = true;
-j.src = u + "/whatsapp-widget.min.js?_=" + Math.random();
-h.parentNode.insertBefore(j, h);
-})(window, document, "script", "https://waw.gallabox.com");
-</script>
+<script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
+        <script>
+          var wa_btnSetting = {"btnColor":"#16BE45","ctaText":"WhatsApp Us","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"01095661985","welcomeMessage":"Hello","zIndex":999999,"btnColorScheme":"light"};
+          window.onload = () => {
+            _waEmbed(wa_btnSetting);
+          };
+        </script>
+      
+   
+   
 </body>
 </html>
