--- a/index.html
+++ b/index.html
@@ -685,11 +685,12 @@ $(document).ready(function()
 
 <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
         <script>
-          var wa_btnSetting = {"btnColor":"#16BE45","ctaText":"WhatsApp Us","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"01095661985","welcomeMessage":"Hello","zIndex":999999,"btnColorScheme":"light"};
+          var wa_btnSetting = {"btnColor":"#16BE45","ctaText":"تواصل معنا على الواتس","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"01095661985","welcomeMessage":"اهلا فى شركة السعد لنقل الاثاث لمعرفة كافة التفاصيل والاسعار المناسبة اتصل بنا على 01095661985","zIndex":999999,"btnColorScheme":"light"};
           window.onload = () => {
             _waEmbed(wa_btnSetting);
           };
         </script>
+      
       
    
    
